--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   dio: ^5.9.0
   flutter_launcher_icons: ^0.14.4
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
